# golfed-aoc-2016

./: README  aoc-day1.cabal  day1.hs
