cabal-version:      2.4
name:               aoc-day1
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christopher-Marios Mamaloukas
maintainer:         xmamalou@freemail.gr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc-day1
    main-is:          day1.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, split ^>=0.2.3.5
    hs-source-dirs:   .
    default-language: Haskell2010
